#4 - Add many configs in application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservation
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.separator=/;
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.desciptor.sql.BasicBinder=TRACE
