#8 - Set flyway schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/reservation
+spring.flyway.enabled=true
+spring.flyway.schemas=reservation
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservation?currentSchema=reservation
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.sql-script-encoding=UTF-8
