--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,8 @@
-server.port=8888
+server.port=8080
+spring.flyway.enabled=true
+spring.flyway.schemas=reservation
 spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/reservation
+spring.datasource.url=jdbc:postgresql://localhost:5432/reservation?currentSchema=reservation
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
