--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,12 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/reservation?currentSchema
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.default_schema=reservation
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.separator=/;
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.desciptor.sql.BasicBinder=TRACE
+
