--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,28 @@
+# Application name
+spring.application.name=springboot-reservation
+# Database Configuration
 spring.jpa.database=POSTGRESQL
-spring.flyway.enabled=true
-spring.flyway.schemas=reservation
-spring.datasource.url=jdbc:postgresql://localhost:5432/reservation?currentSchema=reservation
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5433/reservation?currentSchema=reservation
+spring.datasource.username=yu71
+spring.datasource.password=53cret
+spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.default_schema=reservation
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+# Flyway Configuration
+spring.flyway.enabled=true
+spring.flyway.schemas=reservation
+spring.flyway.baseline-on-migrate=true
+# Datasource Configuration
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.separator=/;
+# Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.desciptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Docker Compose
+spring.docker.compose.enabled=true
+spring.docker.compose.file=compose.yml
 
